--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 	],
 	"require": {
 		"php": ">=8.0",
-		"typo3/cms-core": "^11.5"
+		"typo3/cms-core": "^11.5 || ^12"
 	},
 	"autoload": {
 		"psr-4": {
